{{$NEXT}}

    - New Filter::ForceListValue addresses rt bug #90813

1.00 2013-12-16

    - TT template files changed - update them if you use a local copy.
      Template file 'label_tag' renamed to 'label_element' - old file can
      be deleted. 'field' file changed. New 'errors' file.
    
    - TT no longer listed as a prerequisite. If you use the TT files,
      you must add 'Template' to your own app's prereqs.
    
    - Element::reCAPTCHA and Constraint::reCAPTCHA moved out to separate
      distribution.
    
    - HTML::FormFu::MultiForm moved out to separate distribution.
    
    - auto_container_class(), auto_label_class(), auto_comment_class(),
      auto_container_error_class(), auto_container_per_error_class(),
      auto_error_class() no longer have default values.
      See "RESTORING LEGACY HTML CLASSES" in HTML::FormFu docs to restore
      previous behaviour.
    
    - auto_label_class() no longer adds class to container.
      auto_label_class() now adds class to label tag.
      new auto_container_label_class() adds class to container.
      See "RESTORING LEGACY HTML CLASSES" in HTML::FormFu docs to restore
      previous behaviour.
    
    - auto_comment_class() no longer adds class to both container and comment.
      auto_comment_class() now only adds class to comment tag.
      new auto_container_comment_class() adds class to container.
      See "RESTORING LEGACY HTML CLASSES" in HTML::FormFu docs to restore
      previous behaviour.
    
    - Bug fix: param_value() form method now matches documented behaviour -
      returns undef when field has errors. (Reported by Hailin Hu).
    
    - New Element::Email and Element::URL HTML5 input fields.
    
    - Role::Element::Input has new datalist_options(), datalist_values(),
      datalist_id() and auto_datalist_id() methods to support HTML5 datalists.
      auto_datalist_id() is an inherited accessor which can be set on the 
      Form, MultiForm, or Block.
    